--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@babel/polyfill": "^7.11.5",
 		"gh-pages": "^3.1.0",
 		"jquery": "^3.5.1",
+		"jquery-datepicker": "^1.12.3",
 		"normalize.css": "^8.0.1"
 	}
 }
