--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@babel/polyfill": "^7.11.5",
 		"bootstrap": "^4.5.2",
 		"gh-pages": "^3.1.0",
+		"inputmask": "^5.0.5",
 		"jquery": "^3.5.1",
 		"jquery-datepicker": "^1.12.3",
 		"sass-snippets": "^2.0.4",
